--- a/Report/uu_cern_thesis_report.tex
+++ b/Report/uu_cern_thesis_report.tex
@@ -84,7 +84,7 @@
 \section*{Abstract}
 
 The LHCb experiment probes into the differences between matter and anti-matter by examining particle collisions. Like any modern high energy physics experiment, LHCb relies on a complex hardware and software infrastructure to collect and analyze the data generated from particle collisions. To filter out unimportant data before writing it to permanent storage, particle collision events have to be processed in real-time which requires a lot of computing power.
-This thesis focuses on performance optimizations of several parts of the real-time data processing software -- one of the particle path reconstruction steps, the particle path refining step, and the data structures used real-time reconstruction algorithms. The thesis investigates and employs techniques such as vectorization, cache-friendly memory structures, microarchitecture analysis and memory allocation optimizations. Resulting code has to use today's many-core, data-parallel, superscalar processors to their full potential in order to meet the performance demands of the experiment.
+This thesis focuses on performance optimizations of several parts of the real-time data processing software: i) one of the particle path reconstruction steps; ii) the particle path refining step; iii) the data structures used by the real-time reconstruction algorithms. The thesis investigates and employs techniques such as vectorization, cache-friendly memory structures, microarchitecture analysis, and memory allocation optimizations. The resulting performance-optimized code uses today's many-core, data-parallel, superscalar processors to their full potential in order to meet the performance demands of the experiment.
 
 
 %----------------------------------------------------------------------------
